Resolve "Consider replacing this logic with a RemoteMavenRepository"